@@ -131,6 +131,9 @@ Discard any read that has any of the flags specified by
 set.  FLAGS are specified as for the
 .B "-g"
 option. [UNMAP,SECONDARY,QCFAIL,DUP]
+.TP
+.B -J
+Include reads with deletions in depth computation.
 
 .SH AUTHOR
 .PP
