@@ -1,0 +1,4 @@
+@SQ	SN:ref	LN:30
+r1	0	ref	1	30	20M	*	0	0	*	*
+r2	0	ref	5	30	8M1D5M1D5M	*	0	0	*	*
+r3	0	ref	10	30	9M1D8M1D1M	*	0	0	*	*
