@@ -1,0 +1,29 @@
+ref	1	1
+ref	2	1
+ref	3	1
+ref	4	1
+ref	5	2
+ref	6	2
+ref	7	2
+ref	8	2
+ref	9	2
+ref	10	3
+ref	11	3
+ref	12	3
+ref	13	3
+ref	14	3
+ref	15	3
+ref	16	3
+ref	17	3
+ref	18	3
+ref	19	3
+ref	20	3
+ref	21	2
+ref	22	2
+ref	23	2
+ref	24	2
+ref	25	1
+ref	26	1
+ref	27	1
+ref	28	1
+ref	29	1
